fix(resource_info): Icon alignment
The labels are baseline, so the value need as well and the icon needs adjusment

--- a/app/stylesheets/alchemy/admin/sitemap.scss
+++ b/app/stylesheets/alchemy/admin/sitemap.scss
@@ -252,6 +252,14 @@ alchemy-sitemap {
     position: relative;
     top: 0.1ex;
   }
+
+  .resource_info & {
+    align-items: baseline;
+
+    alchemy-icon {
+      top: 0.3ex;
+    }
+  }
 }
 
 #page_filter_result {
